# unzip-mbcs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py  unzipmbcs.py
scripts/: install.sh
test/: test_unzipmbcs.py
unzipmbcs/: __init__.py  __main__.py  unzipmbcs.py
