[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unzipmbcs"
version = "0.1.2"
description = "UnZip for non-UTF8 encoding such as cp949, sjis, gbk, euc-kr, euc-jp, and gb2312"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords= [
  "unzip", "pkzip", "non-UTF8", "mbcs",
  "cp949", "sjis", "shift_jis", "gbk", "gb18030"
]
authors = [
  {name="Joo-Won Jung", email="sanori@gmail.com"},
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3",
]

[project.urls]
repository = "https://github.com/sanori/unzip-mbcs"

[project.scripts]
unzipmbcs = "unzipmbcs:_main"
